--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 alt="Image de Notre-Dame_de-la-Garde de loin">
                             <div class="card-content">
                                 <div class="card-txt">
-                                    <h3 class="card-title">Notre-Dame_de-la-Garde</h3>
+                                    <h3 class="card-title">Notre-Dame de la Garde</h3>
                                 </div>
                             </div>
                         </article>
